--- a/Clash/Bilibili.yaml
+++ b/Clash/Bilibili.yaml
@@ -1,14 +1,15 @@
 payload:
-  # > Bilibili
-  - DOMAIN-SUFFIX,acg.tv
-  - DOMAIN-SUFFIX,acgvideo.com
-  - DOMAIN-SUFFIX,b23.tv
-  - DOMAIN-SUFFIX,biliapi.com
-  - DOMAIN-SUFFIX,biliapi.net
-  - DOMAIN-SUFFIX,bilibili.com
-  - DOMAIN-SUFFIX,biligame.com
-  - DOMAIN-SUFFIX,biligame.net
-  - DOMAIN-SUFFIX,bilivideo.com
-  - DOMAIN-SUFFIX,hdslb.com
-  - DOMAIN-SUFFIX,im9.com
-  - DOMAIN-KEYWORD,bilibili
+# > Bilibili
+  - DOMAIN-SUFFIX,acg.tv,Bilibili
+  - DOMAIN-SUFFIX,acgvideo.com,Bilibili
+  - DOMAIN-SUFFIX,b23.tv,Bilibili
+  - DOMAIN-SUFFIX,biliapi.com,Bilibili
+  - DOMAIN-SUFFIX,biliapi.net,Bilibili
+  - DOMAIN-SUFFIX,bilibili.com,Bilibili
+  - DOMAIN-SUFFIX,biligame.com,Bilibili
+  - DOMAIN-SUFFIX,biligame.net,Bilibili
+  - DOMAIN-SUFFIX,bilivideo.com,Bilibili
+  - DOMAIN-SUFFIX,hdslb.com,Bilibili
+  - DOMAIN-SUFFIX,im9.com,Bilibili
+  - DOMAIN-SUFFIX,smtcdns.net,Bilibili
+  
