--- a/ini/paipai.ini
+++ b/ini/paipai.ini
@@ -14,7 +14,7 @@ custom_proxy_group=🚀 Proxy`select`.*`
 custom_proxy_group=📺 Bilibili`select`[]🚀 Proxy`[]DIRECT`[]🇭🇰 Hong Kong`[]🇨🇳 Taiwan`
 custom_proxy_group=🔎 Google`select`[]🚀 Proxy`[]DIRECT`[]🇭🇰 Hong Kong`[]🇨🇳 Taiwan`[]🇸🇬 Singapore`[]🇯🇵 Japan`[]🇺🇸 United States`
 custom_proxy_group=📺 Netflix`select`[]🚀 Proxy`[]DIRECT`[]🇭🇰 Hong Kong`[]🇨🇳 Taiwan`[]🇸🇬 Singapore`[]🇯🇵 Japan`[]🇺🇸 United States`
-custom_proxy_group=🎶 NeteaseMusic`select`[]DIRECT`
+custom_proxy_group=🎶 NeteaseMusic`select`[]DIRECT`(Netease)
 custom_proxy_group=🇭🇰 Hong Kong`select`(港|HK)
 custom_proxy_group=🇯🇵 Japan`select`(本|京|阪|泉|埼|沪日|深日|JP|京日)
 custom_proxy_group=🇸🇬 Singapore`select`(新|坡|狮|SG)
