--- a/ini/paipai.ini
+++ b/ini/paipai.ini
@@ -10,13 +10,13 @@ surge_ruleset=DIRECT,https://raw.githubusercontent.com/DivineEngine/Profiles/mas
 surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=Proxy,[]FINAL
 
-custom_proxy_group=Proxy`select`[]Hong Kong`[]Taiwan`[]Singapore`[]Japan`[]Taiwan`[]United States`.*`
+custom_proxy_group=Proxy`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Japan`[]Singapore`[]Taiwan`[]United States`.*`
 custom_proxy_group=Bilibili`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Taiwan`
-custom_proxy_group=Google`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Taiwan`[]Singapore`[]Japan`[]United States`
-custom_proxy_group=Netflix`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Taiwan`[]Singapore`[]Japan`[]United States`
+custom_proxy_group=Google`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Japan`[]Singapore`[]Taiwan`[]United States`
+custom_proxy_group=Netflix`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Japan`[]Singapore`[]Taiwan`[]United States`
 custom_proxy_group=NeteaseMusic`select`[]DIRECT`(Netease)
-custom_proxy_group=Hong Kong`select`(港|HK)
-custom_proxy_group=Japan`select`(本|京|阪|泉|埼|沪日|深日|JP|京日)
-custom_proxy_group=Singapore`select`(新|坡|狮|SG)
-custom_proxy_group=Taiwan`select`(台|新北|彰化|TW)
-custom_proxy_group=United States`select`(美|达|冈|凤|蒙|硅|洛|圣|雅|拉|芝|US)
+custom_proxy_group=Hong Kong`select`(港|HK|Hong)
+custom_proxy_group=Japan`select`(本|京|阪|泉|埼|沪日|深日|JP|京日|Japan)
+custom_proxy_group=Singapore`select`(新|坡|狮|SG|Singa)
+custom_proxy_group=Taiwan`select`(台|新北|彰化|TW|Tai)
+custom_proxy_group=United States`select`(美|达|冈|凤|蒙|硅|洛|圣|雅|拉|芝|US|United)
