--- a/ini/paipai.ini
+++ b/ini/paipai.ini
@@ -15,8 +15,8 @@ custom_proxy_group=Bilibili`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Taiwan`
 custom_proxy_group=Google`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Japan`[]Singapore`[]Taiwan`[]United States`
 custom_proxy_group=Netflix`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Japan`[]Singapore`[]Taiwan`[]United States`
 custom_proxy_group=NeteaseMusic`select`[]DIRECT`(Netease)
-custom_proxy_group=Hong Kong`select`(港|HK|Hong)
-custom_proxy_group=Japan`select`(本|京|阪|泉|埼|沪日|深日|JP|京日|Japan)
-custom_proxy_group=Singapore`select`(新|坡|狮|SG|Sing)
-custom_proxy_group=Taiwan`select`(台|新北|彰化|TW|Tai)
-custom_proxy_group=United States`select`(美|达|冈|凤|蒙|硅|洛|圣|雅|拉|芝|US|United)
+custom_proxy_group=Hong Kong`select`(港|HK|HONG)
+custom_proxy_group=Japan`select`(本|京|阪|泉|埼|沪日|深日|JP|京日|JAPAN)
+custom_proxy_group=Singapore`select`(新|坡|狮|SG|XING)
+custom_proxy_group=Taiwan`select`(台|新北|彰化|TW|TAI)
+custom_proxy_group=United States`select`(美|达|冈|凤|蒙|硅|洛|圣|雅|拉|芝|US|UNITED)
