--- a/ini/paipai.ini
+++ b/ini/paipai.ini
@@ -10,7 +10,7 @@ surge_ruleset=DIRECT,https://raw.githubusercontent.com/DivineEngine/Profiles/mas
 surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=Proxy,[]FINAL
 
-custom_proxy_group=Proxy`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Japan`[]Singapore`[]Taiwan`[]United States`.*`
+custom_proxy_group=Proxy`select`[]Hong Kong`[]Japan`[]Singapore`[]Taiwan`[]United States`.*`
 custom_proxy_group=Bilibili`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Taiwan`
 custom_proxy_group=Google`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Japan`[]Singapore`[]Taiwan`[]United States`
 custom_proxy_group=Netflix`select`[]Proxy`[]DIRECT`[]Hong Kong`[]Japan`[]Singapore`[]Taiwan`[]United States`
