--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -91,3 +91,11 @@ payload:
   - IP-CIDR,108.177.125.188/32,no-resolve
   - IP-CIDR,203.205.253.146/32,no-resolve
   - IP-CIDR,203.205.219.56/32,no-resolve
+
+  # Alibaba
+  - IP-CIDR,223.5.5.5/32,no-resolve
+  - IP-CIDR,223.6.6.6/32,no-resolve
+
+  # Tencent
+  - IP-CIDR,119.28.28.28/32,no-resolve
+  - IP-CIDR,182.254.116.0/24,no-resolve
