--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -79,10 +79,10 @@ payload:
   - IP-CIDR,203.205.253.146/32,no-resolve
   - IP-CIDR,203.205.219.56/32,no-resolve
 
-  # Alibaba
+  # > Alibaba
   - IP-CIDR,223.5.5.5/32,no-resolve
   - IP-CIDR,223.6.6.6/32,no-resolve
 
-  # Tencent
+  # > Tencent
   - IP-CIDR,119.28.28.28/32,no-resolve
   - IP-CIDR,182.254.116.0/24,no-resolve
