--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -84,6 +84,24 @@ payload:
   - IP-CIDR,223.5.5.5/32,no-resolve
   - IP-CIDR,223.6.6.6/32,no-resolve
 
+  # > Google
+  #  - DOMAIN-SUFFIX,blog.google
+  #  - DOMAIN-SUFFIX,googletraveladservices.com
+  #  - DOMAIN,clientservices.googleapis.com
+  #  - DOMAIN,dl.google.com
+  #  - DOMAIN,dl.l.google.com
+  #  - DOMAIN,update.googleapis.com
+  # >> Firebase Cloud Messaging
+  - DOMAIN,mtalk.google.com
+  - DOMAIN,alt1-mtalk.google.com
+  - DOMAIN,alt2-mtalk.google.com
+  - DOMAIN,alt3-mtalk.google.com
+  - DOMAIN,alt4-mtalk.google.com
+  - DOMAIN,alt5-mtalk.google.com
+  - DOMAIN,alt6-mtalk.google.com
+  - DOMAIN,alt7-mtalk.google.com
+  - DOMAIN,alt8-mtalk.google.com
+
   # > Tencent
   - IP-CIDR,119.28.28.28/32,no-resolve
   - IP-CIDR,182.254.116.0/24,no-resolve
