--- a/clash/steam.yaml
+++ b/clash/steam.yaml
@@ -1,18 +1,18 @@
 payload:
   # > Steam
-  - PROCESS-NAME,steam.exe,🇭🇰 Hong Kong
-  - PROCESS-NAME,steamwebhelper.exe,🇭🇰 Hong Kong
-  - DOMAIN-SUFFIX,steam-chat.com,🇭🇰 Hong Kong
-  - DOMAIN-SUFFIX,steamcontent.com,🇭🇰 Hong Kong
-  - DOMAIN-SUFFIX,steamgames.com,🇭🇰 Hong Kong
-  - DOMAIN-SUFFIX,steampowered.com,🇭🇰 Hong Kong
-  - DOMAIN-SUFFIX,steamstat.us,🇭🇰 Hong Kong
-  - DOMAIN-SUFFIX,steamstatic.com,🇭🇰 Hong Kong
-  - DOMAIN-SUFFIX,steamusercontent.com,🇭🇰 Hong Kong
-  - DOMAIN,steambroadcast.akamaized.net,🇭🇰 Hong Kong
-  - DOMAIN,steamcdn-a.akamaihd.net,🇭🇰 Hong Kong
-  - DOMAIN,steamcommunity-a.akamaihd.net,🇭🇰 Hong Kong
-  - DOMAIN,steamstore-a.akamaihd.net,🇭🇰 Hong Kong
-  - DOMAIN,steamusercontent-a.akamaihd.net,🇭🇰 Hong Kong
-  - DOMAIN,steamusercontent-a.akamaihd.net,🇭🇰 Hong Kong
-  - DOMAIN,steamuserimages-a.akamaihd.net,🇭🇰 Hong Kong
+  - PROCESS-NAME,steam.exe
+  - PROCESS-NAME,steamwebhelper.exe
+  - DOMAIN-SUFFIX,steam-chat.com
+  - DOMAIN-SUFFIX,steamcontent.com
+  - DOMAIN-SUFFIX,steamgames.com
+  - DOMAIN-SUFFIX,steampowered.com
+  - DOMAIN-SUFFIX,steamstat.us
+  - DOMAIN-SUFFIX,steamstatic.com
+  - DOMAIN-SUFFIX,steamusercontent.com
+  - DOMAIN,steambroadcast.akamaized.net
+  - DOMAIN,steamcdn-a.akamaihd.net
+  - DOMAIN,steamcommunity-a.akamaihd.net
+  - DOMAIN,steamstore-a.akamaihd.net
+  - DOMAIN,steamusercontent-a.akamaihd.net
+  - DOMAIN,steamusercontent-a.akamaihd.net
+  - DOMAIN,steamuserimages-a.akamaihd.net
