--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -78,6 +78,13 @@ payload:
   # > Alibaba
   - IP-CIDR,223.5.5.5/32,no-resolve
   - IP-CIDR,223.6.6.6/32,no-resolve
+  
+  # China Area Network
+  - DOMAIN-SUFFIX,flyert.com
+  - DOMAIN-SUFFIX,gandi.net
+  - DOMAIN-SUFFIX,snapdrop.net
+  - DOMAIN,download.jetbrains.com
+  - DOMAIN,origin-a.akamaihd.net
 
   # > Google
   - DOMAIN,mtalk.google.com
@@ -93,3 +100,22 @@ payload:
   # > Tencent
   - IP-CIDR,119.28.28.28/32,no-resolve
   - IP-CIDR,182.254.116.0/24,no-resolve
+  - IP-CIDR,203.205.238.0/23,no-resolve
+  - IP-CIDR,203.205.254.0/23,no-resolve
+  
+  # ---(Microsoft)---
+  # > Outlook
+  - DOMAIN,outlook.office365.com
+  - DOMAIN,smtp-mail.outlook.com
+  - DOMAIN,smtp.office365.com
+  # > Windows Server Update Services
+  - DOMAIN-SUFFIX,dl.delivery.mp.microsoft.com
+  - DOMAIN-SUFFIX,update.microsoft.com
+  - DOMAIN-SUFFIX,windowsupdate.com
+  - DOMAIN-SUFFIX,windowsupdate.microsoft.com
+  - DOMAIN,download.microsoft.com
+  - DOMAIN,wustat.windows.com
+  - DOMAIN,ntservicepack.microsoft.com
+  # > IP Query
+  - DOMAIN,ip.istatmenus.app
+  - DOMAIN,sms.imagetasks.com
