--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -1,5 +1,9 @@
 payload:
   # > Direct
+  - DOMAIN,captive.apple.com
+  - DOMAIN,dl-data-01.ommmg.xyz
+  - DOMAIN-SUFFIX,gateway.push-apple.com.akadns.net
+  - DOMAIN-SUFFIX,push.apple.com
   - DOMAIN-SUFFIX,heytapmobi.com
   - DOMAIN-SUFFIX,heytapimage.com
   - DOMAIN-SUFFIX,95516.com
