--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -80,6 +80,8 @@ payload:
   - IP-CIDR,203.205.219.56/32,no-resolve
 
   # > Alibaba
+  - DOMAIN,log.mmstat.com
+  - DOMAIN,sycm.mmstat.com
   - IP-CIDR,223.5.5.5/32,no-resolve
   - IP-CIDR,223.6.6.6/32,no-resolve
   
