--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -104,6 +104,10 @@ payload:
   - DOMAIN,alt8-mtalk.google.com
 
   # > Tencent
+  - DOMAIN,fairplay.l.qq.com
+  - DOMAIN,livew.l.qq.com
+  - DOMAIN,vd.l.qq.com
+  - DOMAIN,vi.l.qq.com
   - IP-CIDR,119.28.28.28/32,no-resolve
   - IP-CIDR,182.254.116.0/24,no-resolve
   - IP-CIDR,203.205.238.0/23,no-resolve
@@ -125,3 +129,7 @@ payload:
   # > IP Query
   - DOMAIN,ip.istatmenus.app
   - DOMAIN,sms.imagetasks.com
+    
+  # > Umeng
+  - DOMAIN,msg.umeng.com
+  - DOMAIN,msg.umengcloud.com
