--- a/ini/test.ini
+++ b/ini/test.ini
@@ -9,9 +9,9 @@ surge_ruleset=MATCH,[]FINAL,🚀 Proxies
 
 
 
-custom_proxy_group=🚀 Proxies`select`
-custom_proxy_group=🍎 Apple`select`
-custom_proxy_group=📺 Streaming`select`
+custom_proxy_group=🚀 Proxies`select`()
+custom_proxy_group=🍎 Apple`select`()
+custom_proxy_group=📺 Streaming`select`()
 custom_proxy_group=🇭🇰 Hong Kong`select`(港|HK|HONG|Hong|HGC)
 custom_proxy_group=🇨🇳 Taiwan`select`(台|新北|彰化|TW|Tai)
 custom_proxy_group=🇸🇬 Singapore`select`(新|狮城|SG|Singa)
