Update and rename test001.ini to test002.ini

--- a/ini/test002.ini
+++ b/ini/test002.ini
@@ -5,7 +5,7 @@ surge_ruleset=🇨🇳 Taiwan,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script
 surge_ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google_No_Resolve.yaml
 surge_ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml
 surge_ruleset=DIRECT,[]GEOIP,CN
-surge_ruleset=MATCH,[]FINAL,🚀 Proxies
+surge_ruleset=🚀 Proxies,[]FINAL
 
 
 
