--- a/ini/test003.ini
+++ b/ini/test003.ini
@@ -12,8 +12,8 @@ surge_ruleset=🚀 Proxies,[]FINAL
 custom_proxy_group=🚀 Proxies`select`()
 custom_proxy_group=🍎 Apple`select`()
 custom_proxy_group=📺 Streaming`select`()
-custom_proxy_group=🇭🇰 Hong Kong`select`(港|HK|HONG|Hong|HGC)
-custom_proxy_group=🇨🇳 Taiwan`select`(台|新北|彰化|TW|Tai)
-custom_proxy_group=🇸🇬 Singapore`select`(新|狮城|SG|Singa)
-custom_proxy_group=🇯🇵 Japan`select``(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap|京日|杭日|青日|[^-]日)
-custom_proxy_group=🇺🇸 United States`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United.*?States)
+custom_proxy_group=🇭🇰 Hong Kong`select`(🇭🇰)
+custom_proxy_group=🇨🇳 Taiwan`select`(🇨🇳)
+custom_proxy_group=🇸🇬 Singapore`select`(🇸🇬)
+custom_proxy_group=🇯🇵 Japan`select``(🇯🇵)
+custom_proxy_group=🇺🇸 United States`select`(🇺🇸)
