Update and rename test003.ini to test004.ini

--- a/ini/test004.ini
+++ b/ini/test004.ini
@@ -12,8 +12,8 @@ surge_ruleset=🚀 Proxies,[]FINAL
 custom_proxy_group=🚀 Proxies`select`()
 custom_proxy_group=🍎 Apple`select`()
 custom_proxy_group=📺 Streaming`select`()
-custom_proxy_group=🇭🇰 Hong Kong`select`(🇭🇰)
-custom_proxy_group=🇨🇳 Taiwan`select`(🇨🇳)
-custom_proxy_group=🇸🇬 Singapore`select`(🇸🇬)
-custom_proxy_group=🇯🇵 Japan`select``(🇯🇵)
-custom_proxy_group=🇺🇸 United States`select`(🇺🇸)
+custom_proxy_group=🇭🇰 Hong Kong`select`(香港|港|HK)
+custom_proxy_group=🇨🇳 Taiwan`select`(台湾|台|TW|Tai)
+custom_proxy_group=🇸🇬 Singapore`select`(新加坡坡||狮城|SG|Sing)
+custom_proxy_group=🇯🇵 Japan`select``(日本|本|JP|Japan)
+custom_proxy_group=🇺🇸 United States`select`(美国|美|US|United)
