--- a/ini/test005.ini
+++ b/ini/test005.ini
@@ -2,14 +2,16 @@ surge_ruleset=DIRECT,https://raw.ommmg.xyz/Bluepants94/rules/master/clash/direct
 surge_ruleset=🍎 Apple,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical.yaml
 surge_ruleset=DIRECT,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili_No_Resolve.yaml
 surge_ruleset=🇨🇳 Taiwan,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.yaml
+surge_ruleset=📺 Emby,https://raw.ommmg.xyz/Bluepants94/rules/master/clash/emby.yaml
 surge_ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google_No_Resolve.yaml
 surge_ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml
 surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=🚀 Proxies,[]FINAL
 
-custom_proxy_group=🚀 Proxies`select`()
-custom_proxy_group=🍎 Apple`select`()
-custom_proxy_group=📺 Streaming`select`()
+custom_proxy_group=🚀 Proxies`select`.*
+custom_proxy_group=🍎 Apple`select`[]DIRECT`.*
+custom_proxy_group=📺 Emby`select`[]DIRECT`.*
+custom_proxy_group=📺 Streaming`select`.*
 custom_proxy_group=🇭🇰 Hong Kong`select`(香港|港|HK)
 custom_proxy_group=🇨🇳 Taiwan`select`(台湾|台|TW|Tai)
 custom_proxy_group=🇸🇬 Singapore`select`(新加坡坡||狮城|SG|Sing)
