--- a/ini/test006.ini
+++ b/ini/test006.ini
@@ -1,10 +1,10 @@
-ruleset=DIRECT,https://raw.ommmg.xyz/Bluepants94/rules/master/clash/direct.yaml
-ruleset=🍎 Apple,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical.yaml
-ruleset=DIRECT,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili_No_Resolve.yaml
-ruleset=🇨🇳 Taiwan,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.yaml
-ruleset=📺 Emby,https://raw.ommmg.xyz/Bluepants94/rules/master/clash/emby.yaml
-ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google_No_Resolve.yaml
-ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml
+ruleset=DIRECT,https://raw.githubusercontent.com/Bluepants94/rules/master/clash/direct.yaml
+ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical.yaml
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili_No_Resolve.yaml
+ruleset=🇨🇳 Taiwan,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.yaml
+ruleset=📺 Emby,https://raw.githubusercontent.com/Bluepants94/rules/master/clash/emby.yaml
+ruleset=📺 Streaming,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google_No_Resolve.yaml
+ruleset=📺 Streaming,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=🚀 Proxies,[]FINAL
 
