--- a/ini/test007.ini
+++ b/ini/test007.ini
@@ -1,12 +1,16 @@
-ruleset=DIRECT,https://raw.githubusercontent.com/Bluepants94/rules/master/clash/direct.yaml
-ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical.yaml
-ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili_No_Resolve.yaml
-ruleset=🇨🇳 Taiwan,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.yaml
-ruleset=📺 Emby,https://raw.githubusercontent.com/Bluepants94/rules/master/clash/emby.yaml
-ruleset=📺 Streaming,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google_No_Resolve.yaml
-ruleset=📺 Streaming,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml
-ruleset=DIRECT,[]GEOIP,CN
-ruleset=🚀 Proxies,[]FINAL
+surge_ruleset=DIRECT,https://raw.ommmg.xyz/Bluepants94/rules/master/surge/direct.list
+surge_ruleset=🍎 Apple,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_All_No_Resolve.list
+surge_ruleset=DIRECT,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili_No_Resolve.yaml
+surge_ruleset=🇨🇳 Taiwan,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Surge/Bahamut/Bahamut.list
+surge_ruleset=📺 Emby,https://raw.ommmg.xyz/Bluepants94/rules/master/surge/emby.list
+surge_ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list
+surge_ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Surge/Netflix/Netflix.list
+surge_ruleset=🇭🇰 Hong Kong,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Surge/Steam/Steam.list
+surge_ruleset=🇸🇬 Singapore,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list
+surge_ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list
+surge_ruleset=📺 Streaming,https://raw.ommmg.xyz/blackmatrix7/ios_rule_script/master/rule/Surge/YouTubeMusic/YouTubeMusic.list
+surge_ruleset=DIRECT,[]GEOIP,CN
+surge_ruleset=🚀 Proxies,[]FINAL
 
 custom_proxy_group=🚀 Proxies`select`.*
 custom_proxy_group=🍎 Apple`select`[]DIRECT`.*
