--- a/ini/test008.ini
+++ b/ini/test008.ini
@@ -18,6 +18,6 @@ custom_proxy_group=📺 Emby`select`[]DIRECT`.*
 custom_proxy_group=📺 Streaming`select`.*
 custom_proxy_group=🇭🇰 Hong Kong`select`(香港|港|HK)
 custom_proxy_group=🇨🇳 Taiwan`select`(台湾|台|TW|Tai)
-custom_proxy_group=🇸🇬 Singapore`select`(新加坡坡||狮城|SG|Sing)
+custom_proxy_group=🇸🇬 Singapore`select`(新加坡|坡|狮城|SG|Sing)
 custom_proxy_group=🇯🇵 Japan`select``(日本|本|JP|Japan)
 custom_proxy_group=🇺🇸 United States`select`(美国|美|US|United)
