--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -2,9 +2,9 @@ payload:
   # > Direct
   - DOMAIN,captive.apple.com
   - DOMAIN,emby-hk-03.ommmg.xyz
-  - DOMAIN,emby-jp-05.ommmg.xyz
   - DOMAIN,emby-us-03.ommmg.xyz
   - DOMAIN,emby-us-04.ommmg.xyz
+  - DOMAIN,cdn-jp.ommmg.xyz
   - DOMAIN-SUFFIX,gateway.push-apple.com.akadns.net
   - DOMAIN-SUFFIX,push.apple.com
   - DOMAIN-SUFFIX,heytapmobi.com
