--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -4,6 +4,7 @@ payload:
   - DOMAIN,cdn-hk.ommmg.xyz
   - DOMAIN,cdn-jp.ommmg.xyz
   - DOMAIN,cdn-us.ommmg.xyz
+  - DOMAIN,emby-us-03.ommmg.xyz
   - DOMAIN-SUFFIX,gateway.push-apple.com.akadns.net
   - DOMAIN-SUFFIX,push.apple.com
   - DOMAIN-SUFFIX,heytapmobi.com
