--- a/clash/emby.yaml
+++ b/clash/emby.yaml
@@ -2,4 +2,6 @@ payload:
   - DOMAIN-SUFFIX,st8.one
   - DOMAIN-SUFFIX,misakaf.org
   - DOMAIN,pan.ommmg.xyz
+  - DOMAIN-SUFFIX,ody.iplc.li
   - DOMAIN,ody.iplc.li
+  
