--- a/clash/emby.yaml
+++ b/clash/emby.yaml
@@ -3,4 +3,10 @@ payload:
   - DOMAIN-SUFFIX,misakaf.org
   - DOMAIN,pan.ommmg.xyz
   - DOMAIN,ody.iplc.li
-  
+  - DOMAIN,emby2.misakaf.org
+  - DOMAIN,stream1.misakaf.org
+  - DOMAIN,stream2.misakaf.org
+  - DOMAIN,stream3.misakaf.org
+  - DOMAIN,stream4.misakaf.org
+  - DOMAIN,stream5.misakaf.org
+
