--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -5,6 +5,7 @@ payload:
   - DOMAIN,cdn-jp.ommmg.xyz
   - DOMAIN,cdn-us.ommmg.xyz
   - DOMAIN,emby-us-03.ommmg.xyz
+  - DOMAIN,ody.iplc.li
   - DOMAIN-SUFFIX,gateway.push-apple.com.akadns.net
   - DOMAIN-SUFFIX,push.apple.com
   - DOMAIN-SUFFIX,heytapmobi.com
