--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -1,6 +1,7 @@
 payload:
   # > Direct
   - DOMAIN,captive.apple.com
+  - DOMAIN,raw.ommmg.xyz
   - DOMAIN,cdn-hk.ommmg.xyz
   - DOMAIN,cdn-jp.ommmg.xyz
   - DOMAIN,cdn-us.ommmg.xyz
