--- a/clash/emby.yaml
+++ b/clash/emby.yaml
@@ -7,3 +7,5 @@ payload:
   - DOMAIN,stream3.misakaf.org
   - DOMAIN,stream4.misakaf.org
   - DOMAIN,stream5.misakaf.org
+  - DOMAIN,stream.odytv.org
+  
