--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -4,21 +4,29 @@ payload:
   - DOMAIN,raw.ommmg.xyz
   - DOMAIN,pan.ommmg.xyz
   - DOMAIN,cdn-hk.ommmg.xyz
-  - DOMAIN,cdn-hk-v6.ommmg.xyz
+  - DOMAIN,misakaf-cdn-hk.ommmg.xyz
+  - DOMAIN,ody-cdn-hk.ommmg.xyz
   - DOMAIN,cdn-jp.ommmg.xyz
-  - DOMAIN,cdn-jp-v6.ommmg.xyz
+  - DOMAIN,misakaf-cdn-jp.ommmg.xyz
+  - DOMAIN,ody-cdn-jp.ommmg.xyz
   - DOMAIN,cdn-us.ommmg.xyz
-  - DOMAIN,cdn-us-v6.ommmg.xyz
+  - DOMAIN,misakaf-cdn-us.ommmg.xyz
+  - DOMAIN,ody-cdn-us.ommmg.xyz
   - DOMAIN,stream-1.ommmg.xyz
-  - DOMAIN,stream-1-v6.ommmg.xyz
+  - DOMAIN,misakaf-stream-1.ommmg.xyz
+  - DOMAIN,ody-stream-1.ommmg.xyz
   - DOMAIN,stream-2.ommmg.xyz
-  - DOMAIN,stream-2-v6.ommmg.xyz
+  - DOMAIN,misakaf-stream-2.ommmg.xyz
+  - DOMAIN,ody-stream-2.ommmg.xyz
   - DOMAIN,stream-3.ommmg.xyz
-  - DOMAIN,stream-3-v6.ommmg.xyz
+  - DOMAIN,misakaf-stream-3.ommmg.xyz
+  - DOMAIN,ody-stream-3.ommmg.xyz
   - DOMAIN,stream-4.ommmg.xyz
-  - DOMAIN,stream-4-v6.ommmg.xyz
+  - DOMAIN,misakaf-stream-4.ommmg.xyz
+  - DOMAIN,ody-stream-4.ommmg.xyz
   - DOMAIN,stream-5.ommmg.xyz
-  - DOMAIN,stream-5-v6.ommmg.xyz
+  - DOMAIN,misakaf-stream-5.ommmg.xyz
+  - DOMAIN,ody-stream-5.ommmg.xyz
   - DOMAIN,embyvip.misakaf.org
   - DOMAIN,ody.iplc.li
   - DOMAIN-SUFFIX,gateway.push-apple.com.akadns.net
