--- a/clash/ai.yaml
+++ b/clash/ai.yaml
@@ -1,6 +1,7 @@
 payload:
   # > All AI
   - DOMAIN,generativelanguage.googleapis.com
+  - DOMAIN,gemini.google.com
   - DOMAIN-SUFFIX,anthropic.com
   - DOMAIN-SUFFIX,claude.ai
   - DOMAIN-SUFFIX,cloudapi.vip
