--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -2,7 +2,7 @@ payload:
   # > Direct
   - DOMAIN,captive.apple.com
   - DOMAIN-SUFFIX,hetzner.com
-  - DOMAIN-SUFFIX,ommmg.xyz
+  - DOMAIN,pan.ommmg.xyz
   - DOMAIN,ody.iplc.li
   - DOMAIN-SUFFIX,gateway.push-apple.com.akadns.net
   - DOMAIN-SUFFIX,push.apple.com
