--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -8,6 +8,7 @@ payload:
   - DOMAIN,stream-2.ommmg.xyz
   - DOMAIN,pan.ommmg.xyz
   - DOMAIN,ody.iplc.li
+  - DOMAIN-SUFFIX,lala.gg
   - DOMAIN-SUFFIX,gateway.push-apple.com.akadns.net
   - DOMAIN-SUFFIX,push.apple.com
   - DOMAIN-SUFFIX,heytapmobi.com
