--- a/clash/ai.yaml
+++ b/clash/ai.yaml
@@ -2,6 +2,7 @@ payload:
   # > All AI
   - DOMAIN,generativelanguage.googleapis.com
   - DOMAIN,gemini.google.com
+  - DOMAIN,ai.google.dev
   - DOMAIN-SUFFIX,anthropic.com
   - DOMAIN-SUFFIX,claude.ai
   - DOMAIN-SUFFIX,cloudapi.vip
