--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -5,7 +5,7 @@ payload:
   - DOMAIN,captive.apple.com
   - DOMAIN,ody-stream-cdn.ommmg.xyz
   - DOMAIN,rfc-stream-cdn.ommmg.xyz
-  - DOMAIN,stream-cdn.ommmg.xyz
+  - DOMAIN,dls-stream-cdn.ommmg.xyz
   - DOMAIN,stream-jp-01.ommmg.xyz
   - DOMAIN,stream-jp-02.ommmg.xyz
   - DOMAIN,storage.ommmg.xyz
