--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -6,8 +6,8 @@ payload:
   - DOMAIN,ody-stream-cdn.ommmg.xyz
   - DOMAIN,rfc-stream-cdn.ommmg.xyz
   - DOMAIN,dsl-stream-cdn.ommmg.xyz
-  - DOMAIN,stream-jp-01.ommmg.xyz
-  - DOMAIN,stream-jp-02.ommmg.xyz
+  - DOMAIN,dsl-stream-jp-01.ommmg.xyz
+  - DOMAIN,dsl-stream-jp-02.ommmg.xyz
   - DOMAIN,storage.ommmg.xyz
   - DOMAIN,raw.ommmg.xyz
   - DOMAIN-SUFFIX,hetzner.com
