--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -11,6 +11,7 @@ payload:
   - DOMAIN,dsl-stream-jp-01.ommmg.xyz
   - DOMAIN,dsl-stream-jp-02.ommmg.xyz
   - DOMAIN,storage.ommmg.xyz
+  - DOMAIN,storage-hk-01.ommmg.xyz
   - DOMAIN,raw.ommmg.xyz
   - DOMAIN-SUFFIX,hetzner.com
   - DOMAIN-SUFFIX,lala.gg
