--- a/clash/emby.yaml
+++ b/clash/emby.yaml
@@ -1,4 +1,5 @@
 payload:
-  - DOMAIN-SUFFIX,st8.one
+  - DOMAIN,story.st8.one
+  - DOMAIN,vip.odylife.org
   - DOMAIN,stream.odytv.org
-  
+  - DOMAIN,www.uhdnow.com
