--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -3,13 +3,15 @@ payload:
   - PROCESS-NAME,cmd.exe
   - PROCESS-NAME,iperf3.exe
   - DOMAIN,captive.apple.com
-  - DOMAIN,ody-stream-cdn.ommmg.xyz
   - DOMAIN,rfc-stream-cdn.ommmg.xyz
   - DOMAIN,rfc-stream-hk-01.ommmg.xyz
   - DOMAIN,rfc-stream-hk-02.ommmg.xyz
   - DOMAIN,dsl-stream-cdn.ommmg.xyz
   - DOMAIN,dsl-stream-jp-01.ommmg.xyz
   - DOMAIN,dsl-stream-jp-02.ommmg.xyz
+  - DOMAIN,ods-stream-cdn.ommmg.xyz
+  - DOMAIN,ods-stream-jp-01.ommmg.xyz
+  - DOMAIN,ods-stream-jp-02.ommmg.xyz
   - DOMAIN,storage.ommmg.xyz
   - DOMAIN,storage-hk-01.ommmg.xyz
   - DOMAIN,raw.ommmg.xyz
