--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -1,5 +1,7 @@
 payload:
   # > Direct
+  - DOMAIN-KEYWORD,v2-tun
+  - DOMAIN-KEYWORD,v2tun
   - PROCESS-NAME,cmd.exe
   - PROCESS-NAME,iperf3.exe
   - DOMAIN,captive.apple.com
