--- a/clash/Gemini_No_Resolve.yaml
+++ b/clash/Gemini_No_Resolve.yaml
@@ -8,15 +8,15 @@
 # TOTAL: 13
 payload:
   - DOMAIN,ai.google.dev
+  - DOMAIN,aistudio.google.com
   - DOMAIN,alkalimakersuite-pa.clients6.google.com
   - DOMAIN,makersuite.google.com
   - DOMAIN,bard.google.com
   - DOMAIN-SUFFIX,deepmind.com
-  - DOMAIN-SUFFIX,deepmind.google
+  - DOMAIN,deepmind.google
   - DOMAIN,gemini.google.com
   - DOMAIN-SUFFIX,generativeai.google
   - DOMAIN,proactivebackend-pa.googleapis.com
-  - DOMAIN-SUFFIX,apis.google.com
   - DOMAIN-KEYWORD,colab
   - DOMAIN-KEYWORD,developerprofiles
   - DOMAIN-KEYWORD,generativelanguage
