--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -3,6 +3,7 @@ payload:
   - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,rfc-stream-))
   - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,dsl-stream-))
   - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,ods-stream-))
+  - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,uhd-stream-))
   - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,storage))
   - DOMAIN-KEYWORD,v2-tun
   - DOMAIN-KEYWORD,v2tun
