--- a/clash/direct.yaml
+++ b/clash/direct.yaml
@@ -1,9 +1,9 @@
 payload:
   # > Direct
-  - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,rfc-stream-))
-  - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,dsl-stream-))
-  - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,ods-stream-))
-  - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,uhd-stream-))
+  - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,rfc))
+  - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,dsl))
+  - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,ods))
+  - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,uhd))
   - AND,((DOMAIN-SUFFIX,ommmg.xyz),(DOMAIN-KEYWORD,storage))
   - DOMAIN,chat.ommmg.xyz
   - DOMAIN-KEYWORD,v2-tun
